# FutureVox-UI-Wireframe

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.orig  CMakeLists.txt.user.rej  Futurevox.qmlproject  Futurevox.qmlproject.qtds  README.md  qmlmodules
build-cmake/: CMakeCache.txt
cmake-build/: CMakeCache.txt
content/: App.qml  BlackKey.ui.qml  CMakeLists.txt  MidiEditor.ui.qml  OctavePane.ui.qml  PianoPane.ui.qml  PlaybackControls.ui.qml  Screen01.ui.qml  ToggleToolbar.ui.qml  TrackColumn.ui.qml  WhiteKey.ui.qml
imports/: CMakeLists.txt
imports/Futurevox/: CMakeLists.txt  Constants.qml  qmldir
imports/Futurevox/designer/: plugin.metainfo
kddock/: CMakeLists.txt
src/: import_qml_plugins.h  main.cpp
